<resources>
    <string name="app_name">Tasker</string>
    <string name="press_to_add_task_cd">Press to Add Task</string>
    <string name="hint_task_name">Task Name</string>
    <string name="important_task">Important Task</string>
    <string name="save_the_task_cd">Save The Task</string>
    <string name="delete_all_completed">Delete All Completed</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_date_created">Sort by Date Created</string>
    <string name="hide_completed">Hide Completed</string>
</resources>