<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date_created" />
        </menu>
    </item>

    <item
        android:id="@+id/action_hide_completed_all_task"
        android:checkable="true"
        app:showAsAction="never"
        android:title="@string/hide_completed" />

    <item
        android:id="@+id/action_delete_all_completed_task"
        android:title="@string/delete_all_completed"
        app:showAsAction="never"/>
</menu>