<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/root_linear_layout_addEdit_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_name"
            android:id="@+id/edit_text_task_name"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/check_box_important"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/important_task" />

        <TextView
            android:id="@+id/text_view_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Date Created: " />

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_normal"
        android:src="@drawable/ic_baseline_check_24"
        android:contentDescription="@string/save_the_task_cd" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>